# s9-ai-arena

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  Dosier_tecnico_S9_AI_Arena_motor_2D_modular.docx  FUSION.md  README.md  docker-compose.demo.yml  docker-compose.yml  package-lock.json  package.json  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts  vitest.db.config.ts  vitest.pure.config.ts
.github/: CODEOWNERS
acceptance/: criteria.mjs  run-acceptance.mjs
docs/: BACKLOG_POST_PROGRAMA.md  CHECKLIST_VALIDACION_V2.md  CHECKLIST_VALIDACION_V4.md  CHECKLIST_VALIDACION_V5.md  DESPLIEGUE_DOMINIO.md  Dosier_tareas_S9_AI_Arena.docx  Dosier_tareas_S9_AI_Arena.md  ENGINE_REGRESSION_LOCKS.md  ESTADO_ACTUAL.md  MIGRACION_V2.md  NEXT_PHASE_R10_R11_R12.md  OPERACION_VM108.md  PROGRAMA_9_BLOQUES.md  R10_MAP_EDITOR_FOUNDATION.md  R10_MAP_EDITOR_SLICE1.md  R11_PUBLIC_SPECTATOR_FOUNDATION.md  R11_SPECTATOR.md  R12_BRACKET_SLICE1.md  R12_PREPARE_BATTLE_MATCHMAKING.md  R12_TOURNAMENTS_RANKING_MATCHMAKING.md  R13_1_RUNTIME_INSPECTOR.md  R13_2_HARDENING.md  R13_5_SAVE_SHARDING.md  R13_5_SLICE2_SPIKE.md  R13_ENGINE_RUNTIME_QUALITY.md  R14_ADR_WEBRTC.md  R14_WEBRTC_STREAMING.md  R16_VISUAL_SLICE1.md  R16_VISUAL_UPGRADE.md  R6_2_REAL_BATTLE_RUNS.md  R7A_OPERATIONAL_REPLAY_INGEST.md  R7_REPLAY_VIEWER.md  R8_ADMIN_MANAGEMENT.md  R8_GESTION_ADMIN.md  R9_BATTLE_CREATION.md  ROADMAP.md  (+22 more)
sdks/python/: README.md  pyproject.toml
sdks/python/arena_sdk/: __init__.py  bot.py  simulator.py  types.py
sdks/python/tests/: _tutorial_bot.py  test_contract.py
(+573 files in other folders)
