[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arena-sdk"
version = "0.1.0"
description = "SDK de referencia en Python para bots de S9 AI Arena (protocolo arena/1)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websocket-client>=1.7,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "jsonschema>=4.23", "referencing>=0.35"]

[project.scripts]
arena-sim = "arena_sdk.simulator:cli"

[tool.setuptools.packages.find]
include = ["arena_sdk*"]
